force-app/main/default/objects/Account/fields/NI_Wallet__c.field-meta.xml
<CustomField>
    <fullName>NI_Wallet__c</fullName>
    <label>NI (Wallet) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>