force-app/main/default/objects/Account/fields/NID__c.field-meta.xml
<CustomField>
    <fullName>NID__c</fullName>
    <formula>&apos;xx&apos;+RIGHT(RTL_NID__c, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Number (NID)</label>
    <type>Text</type>
</CustomField>