force-app/main/default/objects/Account/fields/NIIc_Actual__c.field-meta.xml
<CustomField>
    <fullName>NIIc_Actual__c</fullName>
    <label>NIIc (Actual NI) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>