force-app/main/default/objects/Account/fields/NIIc_SoW__c.field-meta.xml
<CustomField>
    <fullName>NIIc_SoW__c</fullName>
    <formula>if (NIIc_Wallet__c = 0,0,((NIIc_Actual__c / (MONTH( Income_as_of_Wallet__c)))*12)/ NIIc_Wallet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIIc (SoW) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>