force-app/main/default/objects/Account/fields/NIIc_SoW_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>NIIc_SoW_Account_Plan__c</fullName>
    <formula>if(NIIc_Account_Plan__c = 0, 0, NIIc_Plan__c/NIIc_Account_Plan__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIIc (SoW) Account Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>