force-app/main/default/objects/Account/fields/NIId_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>NIId_Account_Plan__c</fullName>
    <label>NIId (Wallet) Account Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>