force-app/main/default/objects/Account/fields/NIId_Actual__c.field-meta.xml
<CustomField>
    <fullName>NIId_Actual__c</fullName>
    <label>NIId (Actual NI) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>