force-app/main/default/objects/Account/fields/NIId_SoW__c.field-meta.xml
<CustomField>
    <fullName>NIId_SoW__c</fullName>
    <formula>IF(NIId_Wallet__c=0,0,(( NIId_Actual__c  / (MONTH( Income_as_of_Wallet__c)))*12)/   NIId_Wallet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIId (SoW) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>