force-app/main/default/objects/Account/fields/NIId_SoW_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>NIId_SoW_Account_Plan__c</fullName>
    <formula>if(NIId_Account_Plan__c =0, 0, NIId_Plan__c/NIId_Account_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIId (SoW) Account Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>