force-app/main/default/objects/Account/fields/No_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Open_Opportunities__c</fullName>
    <label>No. of Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Retail Bancassurance, Retail Card and RDC, Retail Deposit, Retail Investment, Retail Loans, Retail Others, Retail Retentions</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>