force-app/main/default/objects/Account/fields/No_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>No_of_Staff__c</fullName>
    <label>No. of Staff</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>