force-app/main/default/objects/Account/fields/No_of_years_business_run__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_business_run__c</fullName>
    <inlineHelpText>Please input only integer</inlineHelpText>
    <label>No. of years business run</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>