force-app/main/default/objects/Account/fields/Office_Address_Line_1_PE__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Line_1_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Office Address Line 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>