force-app/main/default/objects/Account/fields/Office_Address_Line_3_PE__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Line_3_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Address Line 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>