force-app/main/default/objects/Account/fields/Old_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Old Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>