force-app/main/default/objects/Account/fields/Open_Visit_Plan_tmp__c.field-meta.xml
<CustomField>
    <fullName>Open_Visit_Plan_tmp__c</fullName>
    <label>Open Visit Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>