force-app/main/default/objects/Account/fields/Opened_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Opened_Complaint__c</fullName>
    <description>Number of open complaints of the customer</description>
    <inlineHelpText>จำนวน Customer Complaint ที่ถูกเปิดอยู่ในระบบ CCRP (ข้อมูลจะถูก update ภายใน 2 วัน)</inlineHelpText>
    <label>Opened Complaint</label>
    <summaryFilterItems>
        <field>Customer_Complaint__c.Status__c</field>
        <operation>notEqual</operation>
        <value>CLOSED, CANCEL, REJECTED</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Complaint__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>