force-app/main/default/objects/Account/fields/Operating_Model__c.field-meta.xml
<CustomField>
    <fullName>Operating_Model__c</fullName>
    <label>Operating Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.Monthly</fullName>
            </value>
            <value>
                <fullName>2.Bi_Monthly</fullName>
            </value>
            <value>
                <fullName>3.Quarterly</fullName>
            </value>
            <value>
                <fullName>4.Semi_Annually</fullName>
            </value>
            <value>
                <fullName>5.Annually</fullName>
            </value>
            <value>
                <fullName>6.Weekly</fullName>
            </value>
            <value>
                <fullName>1.Monthly_Branch</fullName>
            </value>
            <value>
                <fullName>2.Bi_Monthly_Branch</fullName>
            </value>
            <value>
                <fullName>3.Quarterly_Branch</fullName>
            </value>
            <value>
                <fullName>4.Semi_Annually_Branch</fullName>
            </value>
            <value>
                <fullName>5.Annually_Branch</fullName>
            </value>
            <value>
                <fullName>6.Weekly_Branch</fullName>
            </value>
            <value>
                <fullName>1.Monthlyfe</fullName>
                <isActive>false</isActive>
                <label>1.Monthlyfe</label>
            </value>
            <value>
                <fullName>Annually</fullName>
                <isActive>false</isActive>
                <label>Annually</label>
            </value>
            <value>
                <fullName>Bi_Monthly</fullName>
                <isActive>false</isActive>
                <label>Bi_Monthly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
                <isActive>false</isActive>
                <label>Semi-Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>