force-app/main/default/objects/Account/fields/Other_Channel__c.field-meta.xml
<CustomField>
    <fullName>Other_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>