force-app/main/default/objects/Account/fields/OutStanding__c.field-meta.xml
<CustomField>
    <fullName>OutStanding__c</fullName>
    <label>Total OutStanding</label>
    <summarizedField>Product_Information_On_Hand__c.Ending_out_Ending_Balance__c</summarizedField>
    <summaryForeignKey>Product_Information_On_Hand__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>