force-app/main/default/objects/Account/fields/Owner_Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assignment_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Assignment Rule</label>
    <referenceTo>Owner_Assignment_Rule__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>