force-app/main/default/objects/Account/fields/Owner_name_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_name_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Name ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>