force-app/main/default/objects/Account/fields/Owner_s_Reporting_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Reporting_Segment__c</fullName>
    <formula>Owner.Reporting_Segment__c</formula>
    <label>Owner&apos;s Reporting Segment</label>
    <type>Text</type>
</CustomField>