force-app/main/default/objects/Account/fields/Parent_Industry__c.field-meta.xml
<CustomField>
    <fullName>Parent_Industry__c</fullName>
    <formula>Parent.Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Industry</label>
    <type>Text</type>
</CustomField>