force-app/main/default/objects/Account/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll</label>
    <length>20</length>
    <type>Text</type>
</CustomField>