force-app/main/default/objects/Account/fields/Previous_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>