force-app/main/default/objects/Account/fields/Primary_Address_Line_1_PE__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_1_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Primary Address No/Moo/Soi/Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>