force-app/main/default/objects/Account/fields/Primary_Address_Line_2_PE__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_2_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Sub District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>