force-app/main/default/objects/Account/fields/Product_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_1__c</fullName>
    <label>Product Interest 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>