force-app/main/default/objects/Account/fields/Prospect_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Converted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prospect Converted Date</label>
    <type>Date</type>
</CustomField>