force-app/main/default/objects/Account/fields/Province_Primary_PE__c.field-meta.xml
<CustomField>
    <fullName>Province_Primary_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Province</label>
    <length>30</length>
    <type>Text</type>
</CustomField>