force-app/main/default/objects/Account/fields/QRS__c.field-meta.xml
<CustomField>
    <fullName>QRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QRS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>