force-app/main/default/objects/Account/fields/QRS_Date__c.field-meta.xml
<CustomField>
    <fullName>QRS_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QRS Result Date</label>
    <type>Date</type>
</CustomField>