force-app/main/default/objects/Account/fields/Re_assign_Notification__c.field-meta.xml
<CustomField>
    <fullName>Re_assign_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using for Workflow Email Alert</description>
    <label>Re-assign Notification</label>
    <type>Checkbox</type>
</CustomField>