force-app/main/default/objects/Account/fields/Refiance_from_Other_FI__c.field-meta.xml
<CustomField>
    <fullName>Refiance_from_Other_FI__c</fullName>
    <label>Refiance from Other FI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SCB</fullName>
            </value>
            <value>
                <fullName>KBank</fullName>
            </value>
            <value>
                <fullName>BBL</fullName>
            </value>
            <value>
                <fullName>KTB</fullName>
            </value>
            <value>
                <fullName>BAY</fullName>
            </value>
            <value>
                <fullName>CIMB</fullName>
            </value>
            <value>
                <fullName>UOB</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Chartered</fullName>
            </value>
            <value>
                <fullName>KKBank</fullName>
            </value>
            <value>
                <fullName>GSB</fullName>
            </value>
            <value>
                <fullName>Ibank</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>