force-app/main/default/objects/Account/fields/Region_Owner__c.field-meta.xml
<CustomField>
    <fullName>Region_Owner__c</fullName>
    <formula>Owner.Region__c</formula>
    <label>Region(Owner)</label>
    <type>Text</type>
</CustomField>