force-app/main/default/objects/Account/fields/Relationship_Level_by_RM_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Level_by_RM_Last_Year__c</fullName>
    <label>Relationship Level by RM Last Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Cold Opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>