force-app/main/default/objects/Account/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>