force-app/main/default/objects/Account/fields/Required_Credit_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Required_Credit_Line_Amount__c</fullName>
    <label>Required Credit Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>