force-app/main/default/objects/Account/fields/RMC_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>RMC_Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>