force-app/main/default/objects/Account/fields/RMC_All_Free__c.field-meta.xml
<CustomField>
    <fullName>RMC_All_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Free</label>
    <type>Checkbox</type>
</CustomField>