force-app/main/default/objects/Account/fields/RMC_Allfree_OS__c.field-meta.xml
<CustomField>
    <fullName>RMC_Allfree_OS__c</fullName>
    <label>Allfree OS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>