force-app/main/default/objects/Account/fields/RMC_AUM__c.field-meta.xml
<CustomField>
    <fullName>RMC_AUM__c</fullName>
    <label>AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>