force-app/main/default/objects/Account/fields/RMC_AUM_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>RMC_AUM_Calculation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AUM Calculation Date</label>
    <type>Date</type>
</CustomField>