force-app/main/default/objects/Account/fields/RMC_Has_PDPA__c.field-meta.xml
<CustomField>
    <fullName>RMC_Has_PDPA__c</fullName>
    <label>PDPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>ยินยอม</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>ไม่ยินยอม</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <label>ยังไม่ดำเนินการ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>