force-app/main/default/objects/Account/fields/RMC_Inactive_MF__c.field-meta.xml
<CustomField>
    <fullName>RMC_Inactive_MF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive MF</label>
    <type>Checkbox</type>
</CustomField>