force-app/main/default/objects/Account/fields/RMC_Is_Same_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>RMC_Is_Same_Team_Lead__c</fullName>
    <formula>$User.RMC_PWA_Team_Lead__c =  RTL_Wealth_RM__r.RMC_PWA_Team_Lead__c</formula>
    <label>Is Same Team Lead</label>
    <type>Checkbox</type>
</CustomField>