force-app/main/default/objects/Account/fields/RMC_Life_Health_BA__c.field-meta.xml
<CustomField>
    <fullName>RMC_Life_Health_BA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Life Health BA</label>
    <type>Checkbox</type>
</CustomField>