force-app/main/default/objects/Account/fields/RMC_MF__c.field-meta.xml
<CustomField>
    <fullName>RMC_MF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MF</label>
    <type>Checkbox</type>
</CustomField>