force-app/main/default/objects/Account/fields/RMC_MF_Gain_Loss_Percent__c.field-meta.xml
<CustomField>
    <fullName>RMC_MF_Gain_Loss_Percent__c</fullName>
    <label>MF Gain/Loss Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>