force-app/main/default/objects/Account/fields/RMC_MF_TSP__c.field-meta.xml
<CustomField>
    <fullName>RMC_MF_TSP__c</fullName>
    <formula>IF( RMC_Number_of_TSP__c &gt; 0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MF TSP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>