force-app/main/default/objects/Account/fields/RMC_MF_Type_A__c.field-meta.xml
<CustomField>
    <fullName>RMC_MF_Type_A__c</fullName>
    <formula>IF( RMC_Number_of_MF_Type_A__c &gt; 0 ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MF Type A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>