force-app/main/default/objects/Account/fields/RMC_Next_Birthday__c.field-meta.xml
<CustomField>
    <fullName>RMC_Next_Birthday__c</fullName>
    <formula>IF(
ADDMONTHS(RTL_Date_Of_Birth__c, ((YEAR(TODAY()) - YEAR(RTL_Date_Of_Birth__c)) * 12 )) &lt; TODAY(),
ADDMONTHS(RTL_Date_Of_Birth__c, ((YEAR(TODAY()) - YEAR(RTL_Date_Of_Birth__c)) * 12 ) + 12 ),
ADDMONTHS(RTL_Date_Of_Birth__c, ((YEAR(TODAY()) - YEAR(RTL_Date_Of_Birth__c)) * 12 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>