force-app/main/default/objects/Account/fields/RMC_NFX_Rate__c.field-meta.xml
<CustomField>
    <fullName>RMC_NFX_Rate__c</fullName>
    <label>RMC NFX Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>