force-app/main/default/objects/Account/fields/RMC_No_of_Management_Visits__c.field-meta.xml
<CustomField>
    <fullName>RMC_No_of_Management_Visits__c</fullName>
    <label>No. of Management Visits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>