force-app/main/default/objects/Account/fields/RMC_Number_of_Active_MF_Account__c.field-meta.xml
<CustomField>
    <fullName>RMC_Number_of_Active_MF_Account__c</fullName>
    <label>Number of  Active MF Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>