force-app/main/default/objects/Account/fields/RMC_Number_of_Inactive_Dormant_Account__c.field-meta.xml
<CustomField>
    <fullName>RMC_Number_of_Inactive_Dormant_Account__c</fullName>
    <label>Number of Dormant/Inactive Account</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>