force-app/main/default/objects/Account/fields/RMC_Payroll_Company__c.field-meta.xml
<CustomField>
    <fullName>RMC_Payroll_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>