force-app/main/default/objects/Account/fields/RMC_Percent_Deposit_Change__c.field-meta.xml
<CustomField>
    <fullName>RMC_Percent_Deposit_Change__c</fullName>
    <label>RMC Percent Deposit Change</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>