force-app/main/default/objects/Account/fields/RMC_Persona__c.field-meta.xml
<CustomField>
    <fullName>RMC_Persona__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>