force-app/main/default/objects/Account/fields/RMC_Reserve__c.field-meta.xml
<CustomField>
    <fullName>RMC_Reserve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reserve</label>
    <type>Checkbox</type>
</CustomField>