force-app/main/default/objects/Account/fields/RMC_Reserve_Waive_Doc_Flag__c.field-meta.xml
<CustomField>
    <fullName>RMC_Reserve_Waive_Doc_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMC Reserve Waive Doc Flag</label>
    <type>Checkbox</type>
</CustomField>