force-app/main/default/objects/Account/fields/RMC_Suitability_Risk_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>RMC_Suitability_Risk_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suitability Risk Expiry Date</label>
    <type>Date</type>
</CustomField>