force-app/main/default/objects/Account/fields/RMC_Suitability_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>RMC_Suitability_Risk_Level__c</fullName>
    <label>Suitability Risk Level</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>