force-app/main/default/objects/Account/fields/RMC_Suitability_Risk_Level_Diff__c.field-meta.xml
<CustomField>
    <fullName>RMC_Suitability_Risk_Level_Diff__c</fullName>
    <formula>RMC_Suitability_Risk_Level_Required__c - RMC_Suitability_Risk_Level__c</formula>
    <label>RMC Suitability Risk Level Diff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>