force-app/main/default/objects/Account/fields/RMC_Suitability_Risk_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>RMC_Suitability_Risk_Level_Required__c</fullName>
    <label>RMC Suitability Risk Level Required</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>