force-app/main/default/objects/Account/fields/RMC_Sum_of_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>RMC_Sum_of_Deposit_Amount__c</fullName>
    <label>Sum of Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>