force-app/main/default/objects/Account/fields/RMC_Sum_of_MF_Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>RMC_Sum_of_MF_Current_Amount__c</fullName>
    <label>Sum of MF Current Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>