force-app/main/default/objects/Account/fields/RMC_ttb_Touch_Expired__c.field-meta.xml
<CustomField>
    <fullName>RMC_ttb_Touch_Expired__c</fullName>
    <formula>TODAY() - 30 &gt; Last_login_success_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ttb Touch Expired</label>
    <type>Checkbox</type>
</CustomField>