force-app/main/default/objects/Account/fields/RMC_Wealth_Flag__c.field-meta.xml
<CustomField>
    <fullName>RMC_Wealth_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RMC Wealth Flag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>