force-app/main/default/objects/Account/fields/RTL_4THANA_Short_Bond_AMT__c.field-meta.xml
<CustomField>
    <fullName>RTL_4THANA_Short_Bond_AMT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TMB Ultra Short Bond Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>