force-app/main/default/objects/Account/fields/RTL_Actual_Product_Holding__c.field-meta.xml
<CustomField>
    <fullName>RTL_Actual_Product_Holding__c</fullName>
    <label>Actual Product Holding</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>