force-app/main/default/objects/Account/fields/RTL_Age__c.field-meta.xml
<CustomField>
    <fullName>RTL_Age__c</fullName>
    <formula>FLOOR((TODAY() -  RTL_Date_Of_Birth__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>