force-app/main/default/objects/Account/fields/RTL_All_Free_AMT__c.field-meta.xml
<CustomField>
    <fullName>RTL_All_Free_AMT__c</fullName>
    <label>All Free</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>